# rumaga

./: Cargo.toml  README.md
src/: exercise.rs  game.rs  io.rs  main.rs  statistic.rs
