[package]
name = "rumaga"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = { version = "0.1"}
futures = { version = "0.3.0", features = ["thread-pool"]}
bytes = { version = "1.0.1"}
